--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 * {
   text-align:center;
   font-family: "Lucida Console", "Courier New", monospace;
+  align-items: center;
   }
    
   body{
-  background-color:rgb(7, 0, 49)    
+  background-color:rgba(11, 2, 65, 0.842);
   }
    
   h2 {
-  color: rgb(148, 59, 0);
-  font-size: 350%;
+  color: rgb(255, 255, 255);
+  font-size: 450%;
+  text-shadow:2.5px 7px #272928c5 ;
   }
    
   p {
   color: rgb(165, 140, 0);
-  font-size : 150%
+  font-size : 200%
   }
    
   button {background-color: rgb(153, 153, 153); /* Green */
@@ -22,9 +24,10 @@
     color: black;
     padding: 10px 32px;
     text-align: center;
+    text-shadow:0.4px 0.8px #000000;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 25px;
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 15px;
@@ -41,8 +44,10 @@
   }
   .button1{
     background-color:rgba(0, 175, 23, 0.692);
-    color: rgb(0, 0, 0)
-     
+    color: rgb(0, 0, 0);
+    text-shadow:0px 0px #00000000;
+    font-size: 120%;
+    font-family: 'Courier New', Courier, monospace;   
   }
   .button1:hover{background-color:rgb(16, 158, 224)}
    
