--- a/style.css
+++ b/style.css
@@ -9,14 +9,30 @@
   }
    
   h2 {
-  color: rgb(255, 255, 255);
+  color: rgb(177, 106, 0);
   font-size: 450%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-shadow:2.5px 7px #272928c5 ;
+  border: #000000;
+  border-style: solid;
+  border-radius: 50%;
+  border-top-color:grey;
+  border-bottom-color:black;
+  border-left-color:black;
+  border-right-color:black;
+  border-left: 0px;
+  border-right: 0px;
+  border-spacing: 2px;
+  border-block-start-color:black;
+  border-block-end-color:black;
   }
    
   p {
-  color: rgb(165, 140, 0);
-  font-size : 200%
+  border: #000000;
+  border-style: ;
+  color: rgb(212, 145, 0);
+  font-size : 150%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
    
   button {background-color: rgb(153, 153, 153); /* Green */
@@ -36,18 +52,20 @@
     box-shadow: 0 8px 16px 0 rgb(15, 15, 15), 0 6px 20px 0 rgb(17, 17, 17)
   }
    
-  button:hover {background-color: rgb(67, 233, 197)}
+  button:hover {
+    background-color: rgba(21, 255, 0, 0.753);
+    font-color: #000000
+  }
    
   button:active {
-    background-color: #ff0000;
-    box-shadow: 0 5px red;
+    box-shadow: 0 3px red;
   }
   .button1{
-    background-color:rgba(0, 175, 23, 0.692);
+    background-color:rgb(206, 206, 206);
     color: rgb(0, 0, 0);
-    text-shadow:0px 0px #00000000;
+    text-shadow:0px 0px #0000002f;
     font-size: 120%;
-    font-family: 'Courier New', Courier, monospace;   
+    font-family: fantasy;   
   }
-  .button1:hover{background-color:rgb(16, 158, 224)}
+  .button1:hover{background-color:rgb(131, 27, 27)}
    
